04/27/2020 [Kowshik] post api call

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>SocietyManagment</strong> by <a href="https://www.linkedin.com/in/kowshik-kondapaneni-a80014b0/">Kowshik Kondapaneni</a>.
+        Copyright &copy; 2020
+      </p>
+    </div>
+  </footer>
