--- a/src/app/society/society.component.html
+++ b/src/app/society/society.component.html
@@ -1,1 +1,9 @@
-<p>society works!</p>
+<form #postForm="ngForm" (ngSubmit)="onCreateSociety(postForm.value)">
+    <label for="name">Name</label>
+    <input type="text" name="name" [(ngModel)]="name">
+    <label for="status">Status</label>
+    <input type="number" name="status" [(ngModel)]="status">
+    <button
+          class="btn btn-primary"
+          type="submit">Submit</button>
+</form>
