--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,10 +1,8 @@
-<h1>Index Component</h1>
-<p>{{getWelcomeMessage()}}</p>
-<button class="button is-info" [disabled]="!showButton" (click)="onButtonClick()">Info</button>
-<br>
-<br>
-<p>{{showButton}}</p>
-<br>
-<label for="Name">Name:</label>
-<input type="text" [(ngModel)]="name">
-<p [ngStyle]="{backgroundColor: displayColor()}" [ngClass]="{green: name==='Kowshik'}">{{name}}</p>
+<div class="container is-fluid">
+    <figure class="image is-16by9">
+        <img src="../../assets/images/SM_Index.svg" alt="Welcome Image" id="SM_Index">
+        <div class="welcome-txt">
+            <h4 id="welcome-header">Introducing Society Managment!</h4><h3 id="sub-header">A tool for managing your enitre society</h3>
+        </div>
+      </figure>
+</div>
