--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<app-documents></app-documents>
+<app-header (selectedObject)="selectedObject($event)"></app-header>
+<app-index *ngIf="homeSelected"></app-index>
+<app-documents *ngIf="documentSelected"></app-documents>
+<app-create-society></app-create-society>
 <app-footer></app-footer>
