--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,20 +4,20 @@
         <img src="assets\images\SM_Logo.png" width="112" height="28">
       </a>
   
-      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <a role="button" class="navbar-burger burger" appNavbarDropDown (eventEmit)="eventEmit($event)" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </a>
     </div>
   
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div id="navbarBasicExample" class="navbar-menu" #addDropDownActiveClass>
       <div class="navbar-start">
-        <a class="navbar-item">
+        <a class="navbar-item" (click)="onSelect('home')">
           Home
         </a>
   
-        <a class="navbar-item">
+        <a class="navbar-item" (click)="onSelect('documentation')">
           Documentation
         </a>
   
