--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,13 @@
 <div class="container is-fluid">
-    
+    <form #postForm="ngForm" (ngSubmit)="onRegister(postForm.value)">
+        <div class="field">
+            <div class="control">
+                <label for="name">Name</label>
+                <input type="text" class="input is-primary" placeholder="Name" name="name" #focusThis [(ngModel)]="name">
+                {{ focusThis.focus() }}
+            </div>
+        </div>
+        <input class="button is-link need-space" type="submit" value="Submit">
+        <input class="button is-danger need-space" type="reset" value="Reset input">
+    </form>
 </div>
