--- a/src/app/society/create-society/create-society.component.html
+++ b/src/app/society/create-society/create-society.component.html
@@ -31,7 +31,7 @@
               </div>
             </div>
           </div>
-        <input class="button is-link need-space" type="submit" value="New Society">
-        <input class="button is-danger need-space" type="reset" value="Reset input">
+        <input class="button is-link" appNeedSpace [marginRight]="'16'" type="submit" value="New Society">
+        <input class="button is-danger" appNeedSpace [marginRight]="'16'" type="reset" value="Reset input">
     </form>
 </div>
