--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<app-header (selectedObject)="selectedObject($event)"></app-header>
-<app-index *ngIf="homeSelected"></app-index>
-<app-documents *ngIf="documentSelected"></app-documents>
-<app-create-society></app-create-society>
+<app-header></app-header>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
