--- a/src/app/society/society-details/society-details.component.html
+++ b/src/app/society/society-details/society-details.component.html
@@ -1,7 +1,7 @@
 <div class="container is-fluid">
     <div class="columns">
         <div class="column">
-            {{ society.name }}
+            {{ society?.name }}
         </div>
     </div>
 </div>
